starting lib, tests and documentation

--- a/prototype_notebooks/00_get_data.ipynb
+++ b/prototype_notebooks/00_get_data.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "root_dir = !git rev-parse --show-toplevel\n",
+    "import os; os.chdir(root_dir[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "BASE_URL = 'http://www.atlasbrasil.org.br'"
    ]
   },
