--- a/prototype_notebooks/02_produce_functions.ipynb
+++ b/prototype_notebooks/02_produce_functions.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "root_dir = !git rev-parse --show-toplevel\n",
+    "import os; os.chdir(root_dir[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import joblib\n",
     "import pandas as pd\n",
     "\n",
@@ -80,18 +90,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpd.GeoDataFrame(geometry=test).crs "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "test = [Point(-59.23352, -3.35030), Point(-60.17875, -3.27442)] * 5000\n",
     "df = get_info(test[0:2])\n",
-    "df"
+    "df.dropna(axis=1).espvida"
    ]
   },
   {
