--- a/prototype_notebooks/02_produce_functions.ipynb
+++ b/prototype_notebooks/02_produce_functions.ipynb
@@ -19,7 +19,7 @@
     "import joblib\n",
     "import pandas as pd\n",
     "\n",
-    "municipalities = joblib.load('data/export/municipalities.pickle')\n",
+    "municipalities = joblib.load('data/export/municipality.pickle')\n",
     "udh = joblib.load('data/export/udh.pickle')\n",
     "\n",
     "udh['level'] = 'udh'\n",
@@ -48,6 +48,15 @@
     "columns_descriptions = columns_descriptions.T\n",
     "columns_descriptions.columns = [c.lower() for c in columns_descriptions.columns]\n",
     "columns_descriptions #.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_descriptions.to_dict();"
    ]
   },
   {
@@ -90,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = [Point(-59.23352, -3.35030), Point(-60.17875, -3.27442)] * 5000\n",
+    "test = [Point(-59.23352, -3.35030), Point(-60.17875, -3.27442), Point(-43.198976, -22.956012), Point(-43.194284, -22.947361)] * 1000\n",
     "df = get_info(test[0:2])\n",
     "df.dropna(axis=1).espvida"
    ]
@@ -111,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns.tolist()"
+    "df.columns.tolist();"
    ]
   },
   {
@@ -123,6 +132,15 @@
     "%%time\n",
     "ble = get_info(test)\n",
     "ble.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ble.rdpc10"
    ]
   },
   {
