--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,20 @@
 CHANGES
 =======
 
+0.2.2
+-----
+
+* build docker image before deploy
+
+0.2.1
+-----
+
+* fix
+
+0.2
+---
+
+* downloading data from github
 * Added data to package, and preparing to deploy to pypi
 
 0.1.0
