Deduplicating udh data to prevent bugs when using data_on_points, adding deploy data functionality

--- a/prototype_notebooks/01_produce_geo_dataframes.ipynb
+++ b/prototype_notebooks/01_produce_geo_dataframes.ipynb
@@ -121,7 +121,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "municipality_geo = gpd.read_file('data/br')\n",
+    "import rarfile\n",
+    "path_to_file = 'data/br/'\n",
+    "filename = 'Municipios_Brasil.rar'\n",
+    "with rarfile.RarFile(path_to_file + filename, 'r') as rar:\n",
+    "    rar.extractall(path_to_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipality_geo = gpd.read_file('data/br/MUNICIPIOS_polígonos.shp')\n",
     "municipality_geo.rename(columns={'COD_IBGE': 'CD_GEOCODM'}, inplace=True)\n",
     "municipality_geo['CD_GEOCODM'] = municipality_geo.CD_GEOCODM.astype(int)\n",
     "municipality_geo.head()"
@@ -303,6 +316,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Treat duplicated data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from feature_names import feature_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duplicated_stuff = udh[udh.duplicated(subset=[\"geometry\", \"NM_MUNICIP\"], keep='last')].isna()\n",
+    "assert all(duplicated_stuff[feature_columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "udh = udh.drop_duplicates(subset=[\"geometry\", \"NM_MUNICIP\"], keep='first')\n",
+    "udh.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Export data"
    ]
   },
@@ -331,7 +380,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "municipalities.to_pickle('data/export/municipalities.pickle')\n",
+    "from os import mkdir\n",
+    "mkdir('data/export')\n",
+    "municipalities.to_pickle('data/export/municipality.pickle')\n",
     "udh.to_pickle('data/export/udh.pickle')"
    ]
   },
@@ -342,6 +393,45 @@
    "outputs": [],
    "source": [
     "!du -sh data/export/*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "with ZipFile('data/export/data.zip', 'w') as zip_obj:\n",
+    "    zip_obj.write('data/export/udh.pickle', 'udh.pickle')\n",
+    "    zip_obj.write('data/export/municipality.pickle', 'municipality.pickle')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deploy data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os.path import isfile\n",
+    "isfile('geo-data-br/data/data.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import replace\n",
+    "replace('data/export/data.zip', 'geo-data-br/data/data.zip')"
    ]
   },
   {
@@ -370,15 +460,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_file"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -391,13 +472,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Default Python (olx)",
    "language": "python",
-   "name": "python3"
+   "name": "olx"
   }
  },
  "nbformat": 4,
